--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   carousel_slider: ^4.0.0
   just_the_tooltip: ^0.0.12
   flutter_inappwebview: ^6.0.0
+  mercadopago_sdk: ^1.3.0
 
 dev_dependencies:
   flutter_test:
